--- a/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data.SQL/Vanrise.Common.Data.SQL.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="BigDataServiceDataManager.cs" />
     <Compile Include="CityDataManager.cs" />
+    <Compile Include="GenericLKUPItemDataManager.cs" />
     <Compile Include="StatusDefinitionDataManager.cs" />
     <Compile Include="VRActionAuditDataManager.cs" />
     <Compile Include="VRActionAuditLKUPDataManager.cs" />
