--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -135,6 +135,10 @@
     <Compile Include="AccountBalanceNotification\RetailAccountBalanceNotificationExtendedQuery.cs" />
     <Compile Include="AccountBalanceNotification\RetailAccountBalanceNotificationTypeSettings.cs" />
     <Compile Include="Extensions\DIDSynchronizer.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountBalanceAccountFilter.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountDefinitionManager.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountInvoiceAccountFilter.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountManager.cs" />
     <Compile Include="ProductFamilyAddOrEditFilter.cs" />
     <Compile Include="ProductDefinitionAddOrEditFilter.cs" />
     <Compile Include="PackageDefinitionAddOrEditFilter.cs" />
