--- a/BusinessProcess/Code/Vanrise.Reprocess.BP.Arguments/Vanrise.Reprocess.BP.Arguments.csproj
+++ b/BusinessProcess/Code/Vanrise.Reprocess.BP.Arguments/Vanrise.Reprocess.BP.Arguments.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReProcessingCommitChangesProcessInput.cs" />
     <Compile Include="ReProcessingFinalizeProcessOutput.cs" />
     <Compile Include="ReProcessingProcessInput.cs" />
     <Compile Include="ReProcessingFinalizeProcessInput.cs" />
