--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -70,6 +70,8 @@
     <Compile Include="GenericLKUP\GenericLKUPDefinitionExtendedSettings.cs" />
     <Compile Include="GenericLKUP\GenericLKUPItem.cs" />
     <Compile Include="GenericLKUP\GenericLKUPItemDetail.cs" />
+    <Compile Include="GenericLKUP\GenericLKUPItemInfo.cs" />
+    <Compile Include="GenericLKUP\GenericLKUPItemInfoFilter.cs" />
     <Compile Include="GenericLKUP\GenericLKUPQuery.cs" />
     <Compile Include="StatusDefinition\IStatusDefinitionFilter.cs" />
     <Compile Include="UISettingData.cs" />
