Implementing chargeable entity selectors for package definitions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40973

--- a/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Business/Retail.BusinessEntity.Business.csproj
@@ -135,6 +135,7 @@
     <Compile Include="AccountBalanceNotification\RetailAccountBalanceNotificationExtendedQuery.cs" />
     <Compile Include="AccountBalanceNotification\RetailAccountBalanceNotificationTypeSettings.cs" />
     <Compile Include="Extensions\DIDSynchronizer.cs" />
+    <Compile Include="Filters\IBusinessEntityDefinitionFilter\ChargeableEntityDefinitionFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountBalanceAccountFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinitionManager.cs" />
     <Compile Include="FinancialAccount\FinancialAccountInvoiceAccountFilter.cs" />
