--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -73,6 +73,10 @@
     <Compile Include="GenericLKUP\GenericLKUPItemInfo.cs" />
     <Compile Include="GenericLKUP\GenericLKUPItemInfoFilter.cs" />
     <Compile Include="GenericLKUP\GenericLKUPQuery.cs" />
+    <Compile Include="OverriddenConfig\OverriddenConfiguration.cs" />
+    <Compile Include="OverriddenConfig\OverriddenConfigurationConfig.cs" />
+    <Compile Include="OverriddenConfig\OverriddenConfigurationGroup.cs" />
+    <Compile Include="OverriddenConfig\OverriddenConfigurationSettings.cs" />
     <Compile Include="StatusDefinition\IStatusDefinitionFilter.cs" />
     <Compile Include="UISettingData.cs" />
     <Compile Include="VRActionAudit\VRActionAuditDetail.cs" />
