synchronise CDR Import and Reprocess
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40996

--- a/BusinessProcess/Code/Vanrise.Queueing.Data.SQL/Vanrise.Queueing.Data.SQL.csproj
+++ b/BusinessProcess/Code/Vanrise.Queueing.Data.SQL/Vanrise.Queueing.Data.SQL.csproj
@@ -68,6 +68,7 @@
     <Compile Include="QueueItemDataManager.cs" />
     <Compile Include="QueueItemTypeDataManager.cs" />
     <Compile Include="QueueSubscriptionDataManager.cs" />
+    <Compile Include="HoldRequestDataManager.cs" />
     <Compile Include="SummaryBatchActivatorDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
