Add MultiNet config file
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41017

--- a/Retail/Code/Retail.Web/Retail.Web.csproj
+++ b/Retail/Code/Retail.Web/Retail.Web.csproj
@@ -839,6 +839,7 @@
     </None>
     <Content Include="Web.config.Zajil.exclude" />
     <Content Include="Web.config.Ringo.exclude" />
+    <Content Include="Web.config.MultiNet.exclude" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -854,7 +855,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>3117</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
