adding rule to ValidateZones t make sure in case of wrong template it will show error
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41039

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Business/TOne.WhS.CodePreparation.Business.csproj
@@ -80,7 +80,7 @@
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessing\WrongMoveCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateCountries\ChangesInPastCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateAfterProcessingCodes\CloseCodeNotExistAndEffectiveCondition.cs" />
-    <Compile Include="BusinessRules\Conditions\ValidateZones\NumericCodeCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\ValidateCodesZones\NumericCodeCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\CodeGroupCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateUICodesZones\ZoneWithoutChangesCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ValidateZones\MultipleCountryCondition.cs" />
