--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -284,6 +284,8 @@
     <Compile Include="ServiceType\ServiceTypeSettings.cs" />
     <Compile Include="ServiceType\ServiceTypeToEdit.cs" />
     <Compile Include="RecurringPeriod\RecurringPeriodSettings.cs" />
+    <Compile Include="Settings\FinancialAccountLocator.cs" />
+    <Compile Include="Settings\RetailTechnicalSettings.cs" />
     <Compile Include="StatusChargingSetDetail.cs" />
     <Compile Include="Status\EntityStatusChargeInfo.cs" />
     <Compile Include="Status\StatusChargingSet.cs" />
